corrected the overflow and image width

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ html{
     margin: 0 auto;
 }
 .hero-text-box{
-    padding: 15px;
+    padding: 25px 20px;
 }
 .hero-textheading{
     font-size: 50px;
@@ -169,7 +169,7 @@ html{
 }
 
 .section-about-text-box{
-     width: 600px;
+    
      text-align: center;
     
 }
@@ -185,17 +185,15 @@ html{
 
 /*******************section about ************************/
 .what-image-container{
-    height: 500px;
+   
 }
 .what-image{
     width: 100%;
-    height: 100%;
 }
 .what-textbox-container{
     background-color: var(--color-section3);
     padding: 40px;
     color: var(--color-primay);
-    height: 500px;
 }
 .sectuion-what-heading{
     font-size: 60px;
@@ -205,7 +203,6 @@ html{
 }
 .section-what-para{
     margin-bottom: 15px;
-    
 }
 .section-what-para2{
     margin-bottom: 20px;
@@ -278,6 +275,11 @@ html{
     padding: 100px 40px;
     color: var(--color-primay);
 }
+.setion-blue::after{
+   clear: both;
+   content: "";
+   display: table;
+}
 .blue-textbox{
     float: left;
     margin-right: 30px;
@@ -346,19 +348,32 @@ html{
         margin-bottom: 40px;
     }
     .service-text-box {
-       margin-bottom: 20px;
-    }
-    .blue-textbox {
-       width: 70%;
+       margin-bottom: 60px;
     }
     .btn-service {
        margin-top: 40px;
     }
+    .setion-blue {
+        padding: 100px;
+    }
+    .blue-textbox{
+        float: none;
+        margin-right: 0;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .button-container {
+        float: none;
+        text-align: center;
 }
 
 @media screen and (max-width:480px){
    
-    
+    .hero-textheading {
+        font-size: 45px;
+    }
+  
+    }
 }
 
 
